force-app/main/default/objects/ALL_AuditTrailConfig__mdt/ALL_AuditTrailConfig__mdt.object-meta.xml
<CustomObject>
    <label>ALL AuditTrailConfig</label>
    <pluralLabel>ALL AuditTrailConfigs</pluralLabel>
</CustomObject>