force-app/main/default/objects/ALL_AuditTrailConfig__mdt/fields/Exclude_Users__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Users__c</fullName>
    <description>A semicolon-separated list of usernames to be excluded from the report.</description>
    <inlineHelpText>A semicolon-separated list of usernames to be excluded from the report.</inlineHelpText>
    <label>Exclude Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>