force-app/main/default/objects/ALL_AuditTrailConfig__mdt/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <description>A semicolon-separated list of keywords to be searched for in the audit trail.</description>
    <inlineHelpText>A semicolon-separated list of keywords to be searched for in the audit trail.</inlineHelpText>
    <label>Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>