force-app/main/default/objects/ALL_AuditTrailConfig__mdt/fields/Recipients__c.field-meta.xml
<CustomField>
    <fullName>Recipients__c</fullName>
    <description>A semicolon-separated list of email addresses for the list of recipients.</description>
    <inlineHelpText>A semicolon-separated list of email addresses for the list of recipients.</inlineHelpText>
    <label>Recipients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>