force-app/main/default/objects/ALL_AuditTrailConfig__mdt/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Defines the date from which the audit trail should be checked; if the field is empty, the last 30 days will be checked automatically.</description>
    <inlineHelpText>Defines the date from which the audit trail should be checked; if the field is empty, the last 30 days will be checked automatically.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>